# xrhash

./: Makefile.in  README  SConstruct  configure.in  platform.make  platform.make.in  xrhash-examples.cproj  xrhash-examples.md.pc  xrhash-lib.cproj  xrhash-lib.md.pc  xrhash.pc.in
src/: SConscript  testutils.h  xrhash-test.c  xrhash.c  xrhash.h
src/examples/: SConscript  spacemap.c  spacemap.h  stringdict.c
src/lib/: Makefile  Makefile.in  SConscript  xrhash.c  xrhash.h  xrhash_fast.c  xrhash_fast.h
src/lib/tests/: Makefile  SConscript  xrhash-test.c
src/lib/tests/cs/: test_Dictionary.cs
src/tests/: SConscript  testutils.c
src/tests/cs/: test_Dictionary.cs
